versions/v3.6.0/doxygen/html/dir_2c6c4fbd167577104b7f1b7148586168.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/dir_2c6c4fbd167577104b7f1b7148586168.html
original_path: doxygen/html/dir_2c6c4fbd167577104b7f1b7148586168.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

pinctrl Directory Reference

| Directories | |
| --- | --- |
|  | [renesas](dir_17f48eb154be6cea623223db5de209e7.md) |

| Files | |
| --- | --- |
| [  ](ambiq-apollo4-pinctrl_8h_source.md) | [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md) |
| [  ](b91-pinctrl_8h_source.md) | [b91-pinctrl.h](b91-pinctrl_8h.md) |
| [  ](cc13xx__cc26xx-pinctrl_8h_source.md) | [cc13xx\_cc26xx-pinctrl.h](cc13xx__cc26xx-pinctrl_8h.md) |
| [  ](emsdp-pinctrl_8h_source.md) | [emsdp-pinctrl.h](emsdp-pinctrl_8h.md) |
| [  ](esp-pinctrl-common_8h_source.md) | [esp-pinctrl-common.h](esp-pinctrl-common_8h.md) |
| [  ](esp32-gpio-sigmap_8h_source.md) | [esp32-gpio-sigmap.h](esp32-gpio-sigmap_8h.md) |
| [  ](esp32-pinctrl_8h_source.md) | [esp32-pinctrl.h](esp32-pinctrl_8h.md) |
| [  ](esp32c3-gpio-sigmap_8h_source.md) | [esp32c3-gpio-sigmap.h](esp32c3-gpio-sigmap_8h.md) |
| [  ](esp32c3-pinctrl_8h_source.md) | [esp32c3-pinctrl.h](esp32c3-pinctrl_8h.md) |
| [  ](esp32s2-gpio-sigmap_8h_source.md) | [esp32s2-gpio-sigmap.h](esp32s2-gpio-sigmap_8h.md) |
| [  ](esp32s2-pinctrl_8h_source.md) | [esp32s2-pinctrl.h](esp32s2-pinctrl_8h.md) |
| [  ](esp32s3-gpio-sigmap_8h_source.md) | [esp32s3-gpio-sigmap.h](esp32s3-gpio-sigmap_8h.md) |
| [  ](esp32s3-pinctrl_8h_source.md) | [esp32s3-pinctrl.h](esp32s3-pinctrl_8h.md) |
| [  ](gecko-pinctrl-s1_8h_source.md) | [gecko-pinctrl-s1.h](gecko-pinctrl-s1_8h.md) |
| [  ](gecko-pinctrl_8h_source.md) | [gecko-pinctrl.h](gecko-pinctrl_8h.md) |
| [  ](ifx__cat1-pinctrl_8h_source.md) | [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md) |
| [  ](imx8qm-pinctrl_8h_source.md) | [imx8qm-pinctrl.h](imx8qm-pinctrl_8h.md) |
| [  ](imx8qxp-pinctrl_8h_source.md) | [imx8qxp-pinctrl.h](imx8qxp-pinctrl_8h.md) |
| [  ](it8xxx2-pinctrl_8h_source.md) | [it8xxx2-pinctrl.h](it8xxx2-pinctrl_8h.md) |
| [  ](lpc11u6x-pinctrl_8h_source.md) | [lpc11u6x-pinctrl.h](lpc11u6x-pinctrl_8h.md) |
| [  ](mchp-xec-pinctrl_8h_source.md) | [mchp-xec-pinctrl.h](mchp-xec-pinctrl_8h.md) |
| [  ](npcx-pinctrl_8h_source.md) | [npcx-pinctrl.h](npcx-pinctrl_8h.md) |
| [  ](nrf-pinctrl_8h_source.md) | [nrf-pinctrl.h](nrf-pinctrl_8h.md) |
| [  ](numaker-m46x-pinctrl_8h_source.md) | [numaker-m46x-pinctrl.h](numaker-m46x-pinctrl_8h.md) |
| [  ](numicro-pinctrl_8h_source.md) | [numicro-pinctrl.h](numicro-pinctrl_8h.md) |
| [  ](nxp-s32-pinctrl_8h_source.md) | [nxp-s32-pinctrl.h](nxp-s32-pinctrl_8h.md) |
| [  ](pinctrl-zynq_8h_source.md) | [pinctrl-zynq.h](pinctrl-zynq_8h.md) |
| [  ](pinctrl-zynqmp_8h_source.md) | [pinctrl-zynqmp.h](pinctrl-zynqmp_8h.md) |
| [  ](quicklogic-eos-s3-pinctrl_8h_source.md) | [quicklogic-eos-s3-pinctrl.h](quicklogic-eos-s3-pinctrl_8h.md) |
| [  ](renesas-rzt2m-pinctrl_8h_source.md) | [renesas-rzt2m-pinctrl.h](renesas-rzt2m-pinctrl_8h.md) |
| [  ](rpi-pico-rp2040-pinctrl_8h_source.md) | [rpi-pico-rp2040-pinctrl.h](rpi-pico-rp2040-pinctrl_8h.md) |
| [  ](rv32m1-pinctrl_8h_source.md) | [rv32m1-pinctrl.h](rv32m1-pinctrl_8h.md) |
| [  ](sifive-pinctrl_8h_source.md) | [sifive-pinctrl.h](sifive-pinctrl_8h.md) |
| [  ](smartbond-pinctrl_8h_source.md) | [smartbond-pinctrl.h](smartbond-pinctrl_8h.md) |
| [  ](stm32-pinctrl-common_8h_source.md) | [stm32-pinctrl-common.h](stm32-pinctrl-common_8h.md) |
| [  ](stm32-pinctrl_8h_source.md) | [stm32-pinctrl.h](stm32-pinctrl_8h.md) |
| [  ](stm32f1-afio_8h_source.md) | [stm32f1-afio.h](stm32f1-afio_8h.md) |
| [  ](stm32f1-pinctrl_8h_source.md) | [stm32f1-pinctrl.h](stm32f1-pinctrl_8h.md) |
| [  ](ti-cc32xx-pinctrl_8h_source.md) | [ti-cc32xx-pinctrl.h](ti-cc32xx-pinctrl_8h.md) |
| [  ](ti-k3-pinctrl_8h_source.md) | [ti-k3-pinctrl.h](ti-k3-pinctrl_8h.md) |
| [  ](xmc4xxx-pinctrl_8h_source.md) | [xmc4xxx-pinctrl.h](xmc4xxx-pinctrl_8h.md) |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [dt-bindings](dir_2e4d86f9d28357ce2f99093c0845149c.md)
- [pinctrl](dir_2c6c4fbd167577104b7f1b7148586168.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
